2009-09-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed the "OpenSSL-exception" from source files in the 'misc' module
	(the exception itself allows to do so). openvas does not link against
	openssl anymore.

	* misc/hash_table_file.c, misc/hash_table_file.h,
	misc/openvas_ssh_login.c, misc/openvas_ssh_login.h: Removed the OpenSSL-
	exception statement.

2009-09-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/bpf_share.c, misc/ftp_funcs.c, misc/harglists.c, misc/hlst.c,
	misc/hlst.h, misc/network.c, misc/resolve.c: Minor cosmetics

	* misc/ids_send.c, misc/kb.h, misc/openvas_logging.c,
	misc/openvas_server.c, misc/plugutils.c, misc/www_funcs.c: Replaced
	uppercase TODOs by lowercase todos, to be included in the
	doxygen-generated todo-list.

	* misc/plugutils.c (get_plugin_preference_fname): Documented,
	reformatted.

2009-09-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed the "OpenSSL-exception" from source files in the 'nasl' module
	(the exception itself allows to do so). openvas does not link against
	openssl anymore.

	* nasl/capture_packet.h, nasl/exec.h, nasl/nasl_cmd_exec.h,
	nasl/nasl_crypto2.h, nasl/nasl_debug.h, nasl/nasl_func.h,
	nasl/nasl_global_ctxt.h, nasl/nasl_host.h, nasl/nasl_http.h,
	nasl/nasl_init.h, nasl/nasl_lex_ctxt.h, nasl/nasl_misc_funcs.h,
	nasl/nasl_packet_forgery.h, nasl/nasl_socket.h, nasl/nasl_text_utils.h,
	nasl/nasl_tree.h, nasl/nasl_var.h, nasl/strutils.h: Removed the
	OpenSSL-exception statement.

2009-09-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed the "OpenSSL-exception" from source files in the 'base' module
	(the exception itself allows to do so). openvas does not link against
	openssl anymore.

	* base/hash_table_util.c, base/hash_table_util.h: Removed the OpenSSL-
	exception statement.

2009-09-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* base/nvti.c, nasl/nasl_cmd_exec.c, nasl/nasl_smb.c, nasl/nasl_wmi.c,